fix: harden web live chat repository